refactor: remove Guava, Perfidix deps from tests and clean up build scopes
Replace Guava IteratorTester with lightweight io.sirix.test.IteratorTester,
delete unused Perfidix benchmark classes, remove guava/guavaTestlib/perfidix
from libraries.gradle, and narrow xmlunit/logback dependency scopes.