@@ -21,20 +21,17 @@
 
 package io.sirix.axis;
 
-import java.util.Collections;
-import java.util.Iterator;
+import java.util.List;
 
 import io.sirix.api.xml.XmlNodeReadOnlyTrx;
 import io.sirix.exception.SirixException;
 import io.sirix.settings.Fixed;
+import io.sirix.test.IteratorTester;
 import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
 import io.sirix.Holder;
 import io.sirix.XmlTestHelper;
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.testing.IteratorFeature;
-import com.google.common.collect.testing.IteratorTester;
 
 public class JsonDescendantAxisTest {
 
@@ -62,49 +59,35 @@ public class JsonDescendantAxisTest {
     rtx.moveToDocumentRoot();
     AbsAxisTest.testAxisConventions(new JsonDescendantAxis(rtx),
         new long[] {1L, 4L, 5L, 6L, 7L, 8L, 9L, 11L, 12L, 13L});
-    new IteratorTester<>(ITERATIONS, IteratorFeature.UNMODIFIABLE,
-        ImmutableList.of(1L, 4L, 5L, 6L, 7L, 8L, 9L, 11L, 12L, 13L), null) {
-      @Override
-      protected Iterator<Long> newTargetIterator() {
-        final XmlNodeReadOnlyTrx rtx = holder.getXmlNodeReadTrx();
-        rtx.moveToDocumentRoot();
-        return new JsonDescendantAxis(rtx);
-      }
-    }.test();
+    new IteratorTester<>(ITERATIONS, List.of(1L, 4L, 5L, 6L, 7L, 8L, 9L, 11L, 12L, 13L), () -> {
+      final XmlNodeReadOnlyTrx r = holder.getXmlNodeReadTrx();
+      r.moveToDocumentRoot();
+      return new JsonDescendantAxis(r);
+    }).test();
 
     rtx.moveTo(1L);
     AbsAxisTest.testAxisConventions(new JsonDescendantAxis(rtx), new long[] {4L, 5L, 6L, 7L, 8L, 9L, 11L, 12L, 13L});
-    new IteratorTester<>(ITERATIONS, IteratorFeature.UNMODIFIABLE,
-        ImmutableList.of(4L, 5L, 6L, 7L, 8L, 9L, 11L, 12L, 13L), null) {
-      @Override
-      protected Iterator<Long> newTargetIterator() {
-        final XmlNodeReadOnlyTrx rtx = holder.getXmlNodeReadTrx();
-        rtx.moveTo(1L);
-        return new JsonDescendantAxis(rtx);
-      }
-    }.test();
+    new IteratorTester<>(ITERATIONS, List.of(4L, 5L, 6L, 7L, 8L, 9L, 11L, 12L, 13L), () -> {
+      final XmlNodeReadOnlyTrx r = holder.getXmlNodeReadTrx();
+      r.moveTo(1L);
+      return new JsonDescendantAxis(r);
+    }).test();
 
     rtx.moveTo(9L);
     AbsAxisTest.testAxisConventions(new JsonDescendantAxis(rtx), new long[] {11L, 12L});
-    new IteratorTester<>(ITERATIONS, IteratorFeature.UNMODIFIABLE, ImmutableList.of(11L, 12L), null) {
-      @Override
-      protected Iterator<Long> newTargetIterator() {
-        final XmlNodeReadOnlyTrx rtx = holder.getXmlNodeReadTrx();
-        rtx.moveTo(9L);
-        return new JsonDescendantAxis(rtx);
-      }
-    }.test();
+    new IteratorTester<>(ITERATIONS, List.of(11L, 12L), () -> {
+      final XmlNodeReadOnlyTrx r = holder.getXmlNodeReadTrx();
+      r.moveTo(9L);
+      return new JsonDescendantAxis(r);
+    }).test();
 
     rtx.moveTo(13L);
     AbsAxisTest.testAxisConventions(new JsonDescendantAxis(rtx), new long[] {});
-    new IteratorTester<>(ITERATIONS, IteratorFeature.UNMODIFIABLE, Collections.<Long>emptyList(), null) {
-      @Override
-      protected Iterator<Long> newTargetIterator() {
-        final XmlNodeReadOnlyTrx rtx = holder.getXmlNodeReadTrx();
-        rtx.moveTo(13L);
-        return new JsonDescendantAxis(rtx);
-      }
-    }.test();
+    new IteratorTester<Long>(ITERATIONS, List.of(), () -> {
+      final XmlNodeReadOnlyTrx r = holder.getXmlNodeReadTrx();
+      r.moveTo(13L);
+      return new JsonDescendantAxis(r);
+    }).test();
   }
 
   @Test
@@ -113,50 +96,36 @@ public class JsonDescendantAxisTest {
     rtx.moveToDocumentRoot();
     AbsAxisTest.testAxisConventions(new JsonDescendantAxis(rtx, IncludeSelf.YES),
         new long[] {Fixed.DOCUMENT_NODE_KEY.getStandardProperty(), 1L, 4L, 5L, 6L, 7L, 8L, 9L, 11L, 12L, 13L});
-    new IteratorTester<>(ITERATIONS, IteratorFeature.UNMODIFIABLE,
-        ImmutableList.of(Fixed.DOCUMENT_NODE_KEY.getStandardProperty(), 1L, 4L, 5L, 6L, 7L, 8L, 9L, 11L, 12L, 13L),
-        null) {
-      @Override
-      protected Iterator<Long> newTargetIterator() {
-        final XmlNodeReadOnlyTrx rtx = holder.getXmlNodeReadTrx();
-        rtx.moveToDocumentRoot();
-        return new JsonDescendantAxis(rtx, IncludeSelf.YES);
-      }
-    }.test();
+    new IteratorTester<>(ITERATIONS,
+        List.of(Fixed.DOCUMENT_NODE_KEY.getStandardProperty(), 1L, 4L, 5L, 6L, 7L, 8L, 9L, 11L, 12L, 13L), () -> {
+      final XmlNodeReadOnlyTrx r = holder.getXmlNodeReadTrx();
+      r.moveToDocumentRoot();
+      return new JsonDescendantAxis(r, IncludeSelf.YES);
+    }).test();
 
     rtx.moveTo(1L);
     AbsAxisTest.testAxisConventions(new JsonDescendantAxis(rtx, IncludeSelf.YES),
         new long[] {1L, 4L, 5L, 6L, 7L, 8L, 9L, 11L, 12L, 13L});
-    new IteratorTester<>(ITERATIONS, IteratorFeature.UNMODIFIABLE,
-        ImmutableList.of(1L, 4L, 5L, 6L, 7L, 8L, 9L, 11L, 12L, 13L), null) {
-      @Override
-      protected Iterator<Long> newTargetIterator() {
-        final XmlNodeReadOnlyTrx rtx = holder.getXmlNodeReadTrx();
-        rtx.moveTo(1L);
-        return new JsonDescendantAxis(rtx, IncludeSelf.YES);
-      }
-    }.test();
+    new IteratorTester<>(ITERATIONS, List.of(1L, 4L, 5L, 6L, 7L, 8L, 9L, 11L, 12L, 13L), () -> {
+      final XmlNodeReadOnlyTrx r = holder.getXmlNodeReadTrx();
+      r.moveTo(1L);
+      return new JsonDescendantAxis(r, IncludeSelf.YES);
+    }).test();
 
     rtx.moveTo(9L);
     AbsAxisTest.testAxisConventions(new JsonDescendantAxis(rtx, IncludeSelf.YES), new long[] {9L, 11L, 12L});
-    new IteratorTester<>(ITERATIONS, IteratorFeature.UNMODIFIABLE, ImmutableList.of(9L, 11L, 12L), null) {
-      @Override
-      protected Iterator<Long> newTargetIterator() {
-        final XmlNodeReadOnlyTrx rtx = holder.getXmlNodeReadTrx();
-        rtx.moveTo(9L);
-        return new JsonDescendantAxis(rtx, IncludeSelf.YES);
-      }
-    }.test();
+    new IteratorTester<>(ITERATIONS, List.of(9L, 11L, 12L), () -> {
+      final XmlNodeReadOnlyTrx r = holder.getXmlNodeReadTrx();
+      r.moveTo(9L);
+      return new JsonDescendantAxis(r, IncludeSelf.YES);
+    }).test();
 
     rtx.moveTo(13L);
     AbsAxisTest.testAxisConventions(new JsonDescendantAxis(rtx, IncludeSelf.YES), new long[] {13L});
-    new IteratorTester<>(ITERATIONS, IteratorFeature.UNMODIFIABLE, ImmutableList.of(13L), null) {
-      @Override
-      protected Iterator<Long> newTargetIterator() {
-        final XmlNodeReadOnlyTrx rtx = holder.getXmlNodeReadTrx();
-        rtx.moveTo(13L);
-        return new JsonDescendantAxis(rtx, IncludeSelf.YES);
-      }
-    }.test();
+    new IteratorTester<>(ITERATIONS, List.of(13L), () -> {
+      final XmlNodeReadOnlyTrx r = holder.getXmlNodeReadTrx();
+      r.moveTo(13L);
+      return new JsonDescendantAxis(r, IncludeSelf.YES);
+    }).test();
   }
 }
